// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildOptions should allow methods to be changed 1`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
}
`;

exports[`buildOptions should overwrite defaults 1`] = `
Object {
  "debug": Object {
    "injectFileName": false,
    "injectScope": true,
    "injectVariableName": true,
  },
  "error": Object {
    "injectFileName": false,
    "injectScope": true,
    "injectVariableName": true,
  },
  "exception": Object {
    "injectFileName": false,
    "injectScope": true,
    "injectVariableName": true,
  },
  "info": Object {
    "injectFileName": false,
    "injectScope": true,
    "injectVariableName": true,
  },
  "log": Object {
    "injectFileName": false,
    "injectScope": true,
    "injectVariableName": true,
  },
  "warn": Object {
    "injectFileName": false,
    "injectScope": true,
    "injectVariableName": true,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 1`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 2`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 3`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
}
`;

exports[`buildOptions should return defaults for invalid args 4`] = `
Object {
  "debug": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "error": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "exception": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "info": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "log": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
  "warn": Object {
    "injectFileName": true,
    "injectScope": true,
    "injectVariableName": true,
  },
}
`;
